# Rtype

./: CMakeLists.txt  LICENSE  README.md  RFC_protocol.txt  build.sh  clean.sh  conanfile.txt  script.py
Engine/Registry/: registry.cpp  registry.hpp
Engine/Sparse_array/: component.hpp  sparce_array.hpp
Engine/System/: system.cpp  system.hpp
Game/Lib/: CMakeLists.txt  Makefile  iLib.hpp  lib_sfml.cpp
Game/client/include/: client.hpp
Game/client/src/: client.cpp
Game/server/include/: server.hpp
Game/server/src/: server.cpp
Game/sfml/: sfml.cpp  sfml.hpp
